# mini-auth

./: .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: app.py
app/core/: captcha.py  config.py  db.py  deps.py  lifespan.py  logger.py  login_guard.py  middlewares.py  redis.py  security.py  sessions.py  templates.py
app/modules/admin/: api.py
app/modules/auth/: api.py
app/modules/user/: curd.py  models.py  schemas.py
redis/data/: dump.rdb
static/css/: admin.css  base.css  login.css
static/js/: admin.js  change_password.js  login.js  theme.js
templates/: admin.html  base.html  change_password.html  login.html
traefik/config/: traefik.yml
traefik/dynamic/: dashboard.yml  middlewares.yml  miniauth.yml  whoami.yml
