[project]
name = "mini-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "pwdlib[argon2]>=0.3.0",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
]
